profile pic upload done

--- a/src/index.css
+++ b/src/index.css
@@ -165,8 +165,8 @@
 }
 
 .img-preview {
-  width: 70px;
-  height: 70px;
+  width: 70px !important;
+  height: 70px !important;
   overflow: hidden;
   border-radius: 50%;
 }
