--- a/src/index.css
+++ b/src/index.css
@@ -330,3 +330,9 @@
   font-size: 18px;
   color: rgba(0, 0, 0, 0.5);
 }
+
+audio::-webkit-media-controls-play-button,
+audio::-webkit-media-controls-panel {
+  background-color: purple;
+  color: #000;
+}
